fix:Changed background colour to meet a sufficient contrast ratio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     width: 100%;
     height: 100vh;
     color: #fff;
-    background: radial-gradient(rgb(1, 64, 64), #000);
+    background: radial-gradient(rgb(7, 34, 34), #000);
 }
 h2 {
     font-family: 'Cormorant', sans-serif;
@@ -89,9 +89,9 @@ h5 {
 
 .hero--home-image {
     background: url("../images/bg/a-group-of-people-holding-hands-on-top-of-a-tree.webp") no-repeat center center;
-    /* -webkit-background-size: cover;
+    -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover; */
+    -o-background-size: cover;
     background-size: cover;
 }
 
